[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer is a web tool to check iweb page readiness for SEO (Search Engine Optimization)"
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
